add-readyToAssign
